maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value estfaceMur
    while (getY()!=0  && !estfaceMur()){
                          ^Escaper:6: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
    } gauche()
      ^